[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["linglp <linglp@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
myst-parser = "^0.18.0"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
